--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "main": "src/index.ts",
     "license": "MIT",
     "scripts": {
+        "start": "node -r ts-node/register/transpile-only -r tsconfig-paths/register ./src/index.ts",
         "test": "jest",
         "test:watch": "jest --watch",
         "test:cov": "jest --coverage",
@@ -11,6 +12,8 @@
         "test:e2e": "jest --config ./test/jest-e2e.json"
     },
     "dependencies": {
+        "dotenv": "^8.2.0",
+        "nodemailer": "^6.4.13",
         "ts-node": "^9.0.0",
         "typescript": "^4.0.3"
     },
@@ -18,14 +21,17 @@
         "@babel/core": "^7.11.6",
         "@babel/preset-env": "^7.11.5",
         "@babel/preset-typescript": "^7.10.4",
+        "@types/dotenv": "^8.2.0",
         "@types/jest": "^26.0.14",
         "@types/node": "^14.11.8",
+        "@types/nodemailer": "^6.4.0",
         "@typescript-eslint/eslint-plugin": "^4.4.0",
         "@typescript-eslint/parser": "^4.4.0",
         "babel-jest": "^26.5.2",
         "eslint": "^7.11.0",
         "jest": "^26.5.2",
         "strip-comments": "^2.0.1",
-        "ts-jest": "^26.4.1"
+        "ts-jest": "^26.4.1",
+        "tsconfig-paths": "^3.9.0"
     }
 }
