Add lib option to tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,7 @@
         },
 
         /* Project Options */
+        "lib": ["dom", "esnext"],
         "module": "commonjs",
         "target": "esnext",
 
