--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@
 
 
 
+### Project ###
+config/Contacts.ts
+config/Teams.ts
+
+
+
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
