--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "eslint": "^7.11.0",
         "jest": "^26.5.2",
         "strip-comments": "^2.0.1",
+        "ts-essentials": "^7.0.0",
         "ts-jest": "^26.4.1",
         "tsconfig-paths": "^3.9.0"
     }
