--- a/.editorconfig
+++ b/.editorconfig
@@ -19,3 +19,6 @@ indent_brace_style = K&R
 quote_type = single
 spaces_around_brackets = outside
 spaces_around_operators = true
+
+[*.hbs]
+insert_final_newline = false
