--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "date-fns": "^2.16.1",
         "dotenv": "^8.2.0",
+        "handlebars": "^4.7.7",
         "jsdom": "^16.4.0",
         "nodemailer": "^6.4.13",
         "ts-node": "^9.0.0",
@@ -25,6 +26,7 @@
         "@babel/preset-env": "^7.11.5",
         "@babel/preset-typescript": "^7.10.4",
         "@types/dotenv": "^8.2.0",
+        "@types/handlebars": "^4.1.0",
         "@types/jest": "^26.0.14",
         "@types/jsdom": "^16.2.4",
         "@types/node": "^14.11.8",
