--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "@types/jsdom": "^16.2.4",
         "@types/node": "^14.11.8",
         "@types/nodemailer": "^6.4.0",
-        "@types/request-promise": "^4.1.46",
+        "@types/request-promise-native": "^1.0.17",
         "@typescript-eslint/eslint-plugin": "^4.4.0",
         "@typescript-eslint/parser": "^4.4.0",
         "babel-jest": "^26.5.2",
