--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "volleyball-alert",
+    "name": "volleyball-alerts",
     "version": "1.0.0",
     "main": "src/index.ts",
     "license": "MIT",
